<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/textStyle"
        android:text="Денег осталось:"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">



        <LinearLayout style="@style/horizontalLayoutStyle">

            <TextView
                style="@style/textStyle"
                android:text="@string/moneySpent" />

            <TextView
                android:id="@+id/leftMoneySpent"
                style="@style/textStyle"
                android:text="@string/ZERO" />

            <Button

                android:id="@+id/leftEraseButton"
                style="@style/buttonStyle"
                android:layout_height="30dp"
                android:text="@string/clearIt" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <TextView
                style="@style/textStyle"
                android:text="@string/moneyLeftForEach" />

            <TextView
                android:id="@+id/leftMoneyLeft"
                style="@style/textStyle"
                android:text="@string/ZERO" />

        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <TextView
                style="@style/WeightNumberStyle"
                android:text="@string/price" />

            <TextView
                style="@style/editStyle"
                android:text="@string/count" />

            <TextView
                style="@style/editStyle"
                android:text="Всего" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <EditText
                android:id="@+id/leftPrice1"
                style="@style/WeightNumberStyle" />

            <EditText
                android:id="@+id/leftCount1"
                style="@style/shortNumberStyle" />

            <TextView
                android:id="@+id/leftTextTotal1"
                style="@style/editStyle" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <EditText
                android:id="@+id/leftPrice2"
                style="@style/WeightNumberStyle" />

            <EditText
                android:id="@+id/leftCount2"
                style="@style/shortNumberStyle" />

            <TextView
                android:id="@+id/leftTextTotal2"
                style="@style/editStyle" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <EditText
                android:id="@+id/leftPrice3"
                style="@style/WeightNumberStyle" />

            <EditText
                android:id="@+id/leftCount3"
                style="@style/shortNumberStyle" />

            <TextView
                android:id="@+id/leftTextTotal3"
                style="@style/editStyle" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <EditText
                android:id="@+id/leftPrice4"
                style="@style/WeightNumberStyle" />

            <EditText
                android:id="@+id/leftCount4"
                style="@style/shortNumberStyle" />

            <TextView
                android:id="@+id/leftTextTotal4"
                style="@style/editStyle" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <EditText
                android:id="@+id/leftPrice5"
                style="@style/WeightNumberStyle" />

            <EditText
                android:id="@+id/leftCount5"
                style="@style/shortNumberStyle" />

            <TextView
                android:id="@+id/leftTextTotal5"
                style="@style/editStyle" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <EditText
                android:id="@+id/leftPrice6"
                style="@style/WeightNumberStyle" />

            <EditText
                android:id="@+id/leftCount6"
                style="@style/shortNumberStyle" />

            <TextView
                android:id="@+id/leftTextTotal6"
                style="@style/editStyle" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalLayoutStyle">

            <EditText
                android:id="@+id/leftPrice7"
                style="@style/WeightNumberStyle" />

            <EditText
                android:id="@+id/leftCount7"
                style="@style/shortNumberStyle" />

            <TextView
                android:id="@+id/leftTextTotal7"
                style="@style/editStyle" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/countButton"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/calculate" />

    <LinearLayout
        style="@style/horizontalLayoutStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/homeButton"
            style="@style/buttonStyle"
            android:text="@string/home" />

        <Button
            android:id="@+id/SetValueButton"
            style="@style/buttonStyle"
            android:text="@string/price_button" />

        <Button
            android:id="@+id/leftButton"
            style="@style/buttonStyle"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/left" />

        <Button
            android:id="@+id/orderButton"
            style="@style/buttonStyle"
            android:text="@string/orders" />

    </LinearLayout>

</RelativeLayout>